# nested-learning-

./: README.md  pyproject.toml  validate_installation.py
examples/: demo_hope.py  demo_nested_learning.py  demo_optimizers.py
nested_learning/: __init__.py
nested_learning/memory/: __init__.py  associative.py  continuum.py
nested_learning/models/: __init__.py  hope.py  self_modifying.py
nested_learning/optimizers/: __init__.py  deep_momentum.py  delta_rule.py  preconditioned.py
nested_learning/utils/: __init__.py  training.py
tests/: __init__.py  test_memory.py  test_models.py  test_optimizers.py
